# PiP

./: .gitignore  .travis.yml  EXECMODE  IMPLEMENTATION  INSTALL  INSTALL.md  LICENSE  Makefile  README.md  RELEASE_NOTE  config.sh.in  configure  configure.ac  index.md
doc/: .doxygen_man7  Author-html.md  Author-md.md  Author.md.in  Makefile  Makefile.obs  README-html.doxy  README-html.md  README-man.doxy  README-man.md  README.md  README.md.in  Slides-html.md  Slides-html.md.in  Slides-md.md  commands.in  config-common.doxy  config-html.doxy  config-latex.doxy  config-man1.doxy  config-man3.doxy  config-man7.doxy  functions.in  man2html.sh  markdown.sh
doc/html/: dir_1012222966f62c486e538e418fd3c32c.html  dir_23ec12649285f9fabf3a6b7380226c28.html  dir_2ea30aa2956a8db99dd22aa5e597f384.html  dir_d44c64559bbebec7f509842c48db8b23.html  files.html  group__PiP-0-init-fin.html  group__PiP-1-spawn.html  group__PiP-2-export.html  group__PiP-3-wait.html  group__PiP-4-query.html  group__PiP-5-exit.html  group__PiP-6-signal.html  group__PiP-7-sync.html  group__ULP-0-yield.html  group__ULP-1-task-queue.html  group__ULP-2-suspension.html  group__ULP-3-misc.html  group__ULP-4-barrier.html  group__ULP-5-mutex.html  group__ULP-6-coupling.html  group__pip-0-init-fin.html  group__pip-1-spawn.html  group__pip-2-exit.html  group__pip-3-wait.html  group__pip-4-export.html  group__pip-5-misc.html  group__pip-check.html  group__pip-man.html  group__pip-signal.html  group__pip1-spawn.html  group__pip2-exit.html  group__pip3-wait.html  group__pips.html  group__printpipmode.html  group__ulp--misc.html  group__ulp-0-yield.html  group__ulp0-yield.html  group__ulp1-task-queue.html  group__ulp2-suspension.html  group__ulp3-barrier.html  (+18 more)
doc/latex/: dir_2ea30aa2956a8db99dd22aa5e597f384.tex  dir_d44c64559bbebec7f509842c48db8b23.tex  group__PiP-0-init-fin.tex  group__PiP-1-spawn.tex  group__PiP-2-export.tex  group__PiP-3-wait.tex  group__PiP-4-query.tex  group__PiP-5-exit.tex  group__PiP-6-signal.tex  group__PiP-7-sync.tex  group__ULP-0-yield.tex  group__ULP-1-task-queue.tex  group__ULP-2-suspension.tex  group__ULP-3-misc.tex  group__ULP-4-barrier.tex  group__ULP-5-mutex.tex  group__ULP-6-coupling.tex  group__pip-0-init-fin.tex  group__pip-1-spawn.tex  group__pip-2-exit.tex  group__pip-3-wait.tex  group__pip-4-export.tex  group__pip-5-misc.tex  group__pip-check.tex  group__pip-man.tex  group__pip-signal.tex  group__pips.tex  index.tex  (+19 more)
doc/latex-inuse/: Makefile  expanded.tex  libpip-manpages.aux  libpip-manpages.idx  libpip-manpages.ilg  libpip-manpages.ind  libpip-manpages.out  libpip-manpages.tex  libpip-manpages.tex.in  libpip-manpages.toc  libpip.tex  man-pages.sh  man1-inputs.tex  man3-pip-inputs.tex  man3-ulp-inputs.tex
eval/: Eval.common  IMB_cpu_exploit.c  Makefile  aio-bare.c  ctxsw.c  eval.h  eval.sh  eval.sh.inc  getpid.c  io.c  linux-bare.c  lock.c  open-close.c  open-write-close-1.c  open-write-close-linux.c  open-write-close-nocouple.c  open-write-close-pip.c  open-write-close.c  open-write-close.h  pip_couple.c  pip_getpid.c  pip_yield.c  pipe-linux.c  pipe-pip-nd.c  pipe-pip.c  sched_yield.c  sem.c
examples/: Makefile  export.c  hello.c  hello.c~
gdbif/: Makefile  pip_gdbif.c  pip_readelf.c
html/: files.html  globals.html  globals_func.html  group__libpip.html  group__pip-check.html  group__pip-exec.html  group__pip-man.html  group__pip-mode.html  group__pip-overview.html  group__pipcc.html  group__piplnlibs.html  group__pipmap.html  group__piprun.html  group__pips.html  group__pmap.html  group__printpipmode.html  index.html  libpip.html  md_README.html  modules.html  pages.html  pip-check.html  pip_8h.html  pip_8h_source.html  pip__blt_8h_source.html  pip__signal_8h_source.html  pip_abort.html  pip_decouple.html  pip_exit.html  pip_export.html  pip_fin.html  pip_get_mode.html  pip_get_mode_str.html  pip_get_ntasks.html  pip_get_pipid.html  pip_get_system_id.html  pip_import.html  pip_init.html  pip_is_initialized.html  pip_is_shared_fd.html  (+18 more)
include/: Doxyfile  Makefile  build.h  cma.h  config.h  config.h.in  pip.h  pip.h.in  pip_blt.h  pip_clone.h  pip_config.h.in  pip_context.h  pip_debug.h  pip_debug_queue.h  pip_dlfcn.h  pip_gdbif.h  pip_gdbif_enums.h  pip_gdbif_func.h  pip_gdbif_queue.h  pip_internal.h  pip_list.h  pip_machdep.h  pip_machdep_aarch64.h  pip_machdep_x86_64.h  pip_queue.h  pip_signal.h  pip_types.h  pip_ulp.h  pip_universal.h  pip_util.h  pvas.h  xpmem.h  xpmem_pip.h
latex/: bigdelim.sty  bigstrut.sty  files.tex  group__libpip.aux  group__libpip.tex  group__pip-check.aux  group__pip-check.tex  group__pip-exec.tex  group__pip-man.aux  group__pip-man.tex  group__pip-mode.aux  group__pip-mode.tex  group__pip-overview.aux  group__pip-overview.tex  group__pipcc.aux  group__pipcc.tex  group__piplnlibs.aux  group__piplnlibs.tex  group__pipmap.tex  group__piprun.tex  group__pips.aux  group__pips.tex  group__pmap.tex  group__printpipmode.aux  group__printpipmode.tex  index.tex  libpip.tex  modules.tex  pip-check.tex  pip_8h.tex  pip_abort.tex  pip_decouple.tex  pip_exit.tex  pip_export.tex  pip_fin.tex  pip_get_mode.tex  pip_get_mode_str.tex  pip_get_ntasks.tex  pip_get_pipid.tex  pip_get_system_id.tex  (+27 more)
lib/: Makefile  Makefile.in  build-header.sh  build.h  cma.c  concat.c  fcontext.mk  fcontext.mk.in  fctx_defs.mk  fctx_defs.mk.in  pip.c  pip_2_backport.c  pip_blt.c  pip_clone.c  pip_context.c  pip_dlfcn.c  pip_gdb.c  pip_gdbif.c  pip_got.c  pip_init.c  pip_main.c  pip_namexp.c  pip_signal.c  pip_spawn.c  pip_sync.c  pip_universal.c  pip_util.c  pip_wait.c  pvas.c  xpmem.c
preload/: Makefile  pip_preload.c
release/: expand_keyword.sh  keywords.conf  version.conf  version.conf.in
sample/: Makefile
test/: ACT.sh  ENDURANCE.sh  MIX.sh  MIXOS.sh  Makefile  NG.sh  OK.sh  OS.sh  Test.common  bin.list  check.sh  exit_code.sh.inc  libnull.c  loop.sh  main.c  null.c  pip-exec.list  piprun.list  sample.list  skip.sh  skip_mode.sh  skip_thread_mode.sh  test-all.sh  test.h  test.list  test.mk  test.sh  test.sh.inc
util/: Makefile  pip_gdbif_offsets.c  piplnlibs.in
(+649 files in other folders)
